--- a/New Text Document.html
+++ b/New Text Document.html
@@ -49,7 +49,7 @@
             min-height: 400px;
             background: url('https://source.unsplash.com/1600x900/?nature,water') no-repeat 0 -400px;
             text-align: center;
-            color: #ffffff;
+            color: #FFD700;
         }
         #showcase h1 {
             margin-top: 100px;
