Update New Text Document.html

--- a/New Text Document.html
+++ b/New Text Document.html
@@ -47,7 +47,7 @@
         }
         #showcase {
             min-height: 400px;
-            background: url('https://source.unsplash.com/1600x900/?nature,water') no-repeat 0 -400px;
+            background: url('https://drive.google.com/file/d/1vSTBJpfBj1Kap2K8YJQcSs1R1zZMHId0/view?usp=drive_link') no-repeat 0 -400px;
             text-align: center;
             color: #FFD700;
         }
